Se mueve archivo gitignore.

--- a/booking-web-application-client/.gitignore
+++ b/booking-web-application-client/.gitignore
@@ -1,33 +1,15 @@
-HELP.md
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+# ignore generated eclipse config files.
+**/.mvn/*
+**/.settings/*
+**/.settings
+**/target/
+**/bin
+**/bin/*
+**/logs
+**/logs/*
+**/.classpath
+**/.project
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-
-### IntelliJ IDEA ###
-.idea
-*.iws
 *.iml
-*.ipr
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### VS Code ###
-.vscode/
+*.idea
+*.bak
